--- a/BlogMaui/Areas/Blog/Posts/PostListPage.xaml
+++ b/BlogMaui/Areas/Blog/Posts/PostListPage.xaml
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:BlogMaui.Areas.Blog.Posts"
              xmlns:root="clr-namespace:BlogMaui"
              xmlns:fonts="clr-namespace:BlogMaui.Fonts"
              x:Class="BlogMaui.Areas.Blog.Posts.PostListPage"
+             x:DataType="local:PostListViewModel"
              Title="Posts">
 
     <Grid RowDefinitions="Auto,Auto,*,Auto,Auto">
@@ -21,7 +23,7 @@
         <ScrollView Grid.Row="2">
             <ListView ItemsSource="{Binding Posts}">
                 <ListView.ItemTemplate>
-                    <DataTemplate>
+                    <DataTemplate x:DataType="local:PostHeaderViewModel">
                         <TextCell Text="{Binding Title}" TextColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Secondary}}" Command="{Binding Select}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
