--- a/BlogMaui/Areas/Blog/Sites/SiteEditPage.xaml
+++ b/BlogMaui/Areas/Blog/Sites/SiteEditPage.xaml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:BlogMaui.Areas.Blog.Sites"
              xmlns:fonts="clr-namespace:BlogMaui.Fonts"
              x:Class="BlogMaui.Areas.Blog.Sites.SiteEditPage"
+             x:DataType="local:SiteEditViewModel"
              Title="Edit Site">
     <VerticalStackLayout>
         <Label Text="Name"
