--- a/BlogMaui/Areas/Blog/Sites/SiteListPage.xaml
+++ b/BlogMaui/Areas/Blog/Sites/SiteListPage.xaml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:BlogMaui.Areas.Blog.Sites"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:root="clr-namespace:BlogMaui"
              x:Class="BlogMaui.Areas.Blog.Sites.SiteListPage"
+             x:DataType="local:SiteListViewModel"
              Title="Sites">
     <toolkit:DockLayout>
         <Label toolkit:DockLayout.DockPosition="Top"
@@ -14,7 +16,7 @@
         <ScrollView>
             <ListView ItemsSource="{Binding Sites}">
                 <ListView.ItemTemplate>
-                    <DataTemplate>
+                    <DataTemplate x:DataType="local:SiteHeaderViewModel">
                         <TextCell
                             Text="{Binding Name}"
                             Detail="{Binding Url}"
