Add data type attributes to missing components

--- a/BlogMaui/Authentication/GatekeeperPage.xaml
+++ b/BlogMaui/Authentication/GatekeeperPage.xaml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:BlogMaui.Authentication"
              xmlns:root="clr-namespace:BlogMaui"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="BlogMaui.Authentication.GatekeeperPage"
+             x:DataType="local:GatekeeperViewModel"
              Title="GatekeeperPage"
              Shell.NavBarIsVisible="False">
     <ContentPage.Resources>
