--- a/BlogMaui/Components/MergePage.xaml
+++ b/BlogMaui/Components/MergePage.xaml
@@ -1,7 +1,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:BlogMaui.Components"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="BlogMaui.Components.MergePage">
+             x:Class="BlogMaui.Components.MergePage"
+             x:DataType="local:MergeViewModel">
     <toolkit:DockLayout>
         <ScrollView>
             <ListView ItemsSource="{Binding Candidates}"
