Move from a control template to a content view with this binding context

--- a/BlogMaui/Areas/Blog/Posts/PostEditPage.xaml
+++ b/BlogMaui/Areas/Blog/Posts/PostEditPage.xaml
@@ -12,8 +12,7 @@
                 EntryText="{Binding Title}"
                 Placeholder="Enter post title"
                 ButtonCommand="{Binding MergeTitlesCommand}"
-                ButtonIsVisible="{Binding ShouldMergeTitles}"
-                ControlTemplate="{StaticResource Key=XLabeledEntryTemplate}" />
+                ButtonIsVisible="{Binding ShouldMergeTitles}" />
         <HorizontalStackLayout>
             <Button Text="Save"
                     Command="{Binding SaveCommand}"
