Export facts from the account page

--- a/BlogMaui/Areas/Account/AccountPage.xaml
+++ b/BlogMaui/Areas/Account/AccountPage.xaml
@@ -12,6 +12,7 @@
                Margin="10" />
         <HorizontalStackLayout Grid.Row="1">
             <Button Text="Log Out" Command="{Binding LogOut, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}" Margin="10" />
+            <Button Text="Export Facts" Command="{Binding ExportFactsCommand}" Margin="10" />
         </HorizontalStackLayout>
     </Grid>
 </ContentPage>
