--- a/BlogMaui/Areas/Account/ExportedFactsPage.xaml
+++ b/BlogMaui/Areas/Account/ExportedFactsPage.xaml
@@ -11,10 +11,12 @@
                    HorizontalOptions="FillAndExpand" 
                    Padding="10"/>
         </ScrollView>
-        <Button Text="Back" 
-                Clicked="OnBackButtonClicked" 
-                VerticalOptions="End" 
-                HorizontalOptions="Start" 
-                Margin="10"/>
+        <ImageButton Source="circle_arrow_left.png" 
+                     Clicked="OnBackButtonClicked" 
+                     VerticalOptions="End" 
+                     HorizontalOptions="Start" 
+                     Margin="10" 
+                     BackgroundColor="Transparent" 
+                     Opacity="0.75"/>
     </Grid>
 </ContentPage>
