Add delete button to the site edit page

--- a/BlogMaui/Areas/Blog/Sites/SiteEditPage.xaml
+++ b/BlogMaui/Areas/Blog/Sites/SiteEditPage.xaml
@@ -29,6 +29,11 @@
                     Command="{Binding CancelCommand}"
                     FontSize="Medium"
                     Margin="5,10,10,10"/>
+            <Button Text="Delete"
+                    Command="{Binding DeleteCommand}"
+                    FontSize="Medium"
+                    Margin="5,10,10,10"
+                    BackgroundColor="Red"/>
         </HorizontalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
